--- a/fishing_landing.html
+++ b/fishing_landing.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Doctor Dry Fly - California Heritage Trout Challenge</title>
+<title>Doctor Dry Fly - Fly Fishing</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -91,7 +91,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav navbar-nav-scroll me-auto">
   <li class="nav-item">
-    <a class="nav-link" href="./fishing_landing.html">
+    <a class="nav-link active" href="./fishing_landing.html" aria-current="page">
  <span class="menu-text">Fly Fishing in the West</span></a>
   </li>  
   <li class="nav-item">
@@ -109,14 +109,31 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
-        
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#slams" id="toc-slams" class="nav-link active" data-scroll-target="#slams">Slams</a>
+  <ul class="collapse">
+  <li><a href="#utah-cutthroat-slam" id="toc-utah-cutthroat-slam" class="nav-link" data-scroll-target="#utah-cutthroat-slam">Utah Cutthroat Slam</a></li>
+  <li><a href="#wyoming-cutt-slam" id="toc-wyoming-cutt-slam" class="nav-link" data-scroll-target="#wyoming-cutt-slam">Wyoming Cutt Slam</a></li>
+  <li><a href="#nevada-native-fish-slam" id="toc-nevada-native-fish-slam" class="nav-link" data-scroll-target="#nevada-native-fish-slam">Nevada Native Fish Slam</a></li>
+  <li><a href="#california-heritage-trout-challenge" id="toc-california-heritage-trout-challenge" class="nav-link" data-scroll-target="#california-heritage-trout-challenge">California Heritage Trout Challenge</a></li>
+  <li><a href="#western-native-trout-challenge-completed-write-up-coming-soon" id="toc-western-native-trout-challenge-completed-write-up-coming-soon" class="nav-link" data-scroll-target="#western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</a></li>
+  </ul></li>
+  <li><a href="#other-waters" id="toc-other-waters" class="nav-link" data-scroll-target="#other-waters">Other Waters</a>
+  <ul class="collapse">
+  <li><a href="#fishing-patagonia-march-2023" id="toc-fishing-patagonia-march-2023" class="nav-link" data-scroll-target="#fishing-patagonia-march-2023">Fishing Patagonia (March 2023)</a></li>
+  </ul></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">California Heritage Trout Challenge</h1>
+<h1 class="title">Fly Fishing</h1>
 </div>
 
 
@@ -131,22 +148,39 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 
 </header>
 
-<p>California is my home state and the place where I first learned to rod-and-reel fish. I made semi-annual camping trips with my family into the Sierra, and sometimes caught fish, which we almost always kept and ate. Some of the best fishing experiences I ever had were in the Kennedy Meadows of the Southern Sierra, fishing the South Fork of the Kern. I also had family in the Kernville area, and fished the Kern a number of times growing up, though I can’t remember having much success on that river.</p>
-<p>I am just beginning my California Heritage Trout Challenge, and I’m excited to make some serious progress this coming summer. Because California has high <a href="https://www.niskanencenter.org/state-capacity-what-is-it-how-we-lost-it-and-how-to-get-it-back/">state capacity</a> and a <a href="https://www.ncsl.org/about-state-legislatures/full-and-part-time-legislatures">professionalized legislature</a>, the California Department of Fish and Wildlife has published a very fancy, glossy <a href="https://wildlife.ca.gov/Fishing/Inland/HTC">brochure</a> that discusses each fish and where to find them. The brochure somewhat confusingly lists twelve total “heritage” trout that exist or existed in California, though anglers only have to catch six to complete the challenge. One of those trout, bull trout, has been extirpated from the state. That leaves eleven.</p>
-<p>A second fish, the Paiute Trout, has a native range comprising a small set of creeks that are currently closed to fishing because the fish is listed under the Endangered Species Act. While anglers can and do catch the fish in other drainages to which they’ve been transported (apparently in the White Mountains), these fish do not qualify for the Heritage Trout Challenge because they are outside their native drainage. The brochure teases that it is possible to catch a Paiute below the closure as some fish apparently wash downstream. I’ve done a lot of research and seen others hint at this possibility, but I don’t know if it’s realistic or not. That seemingly leaves ten total fish.</p>
-<p>Even more confusingly, the brochure lists a second recognition level, that of “Master Angler”, if one catches all eleven species, but that includes the Paiute cutthroat. My impression is that the brochure was published prior to the closure of the Silver Creek drainage, home of the Pauite, so I’m not sure it’s even possible to complete the Master Angler level. References to Master Angler also seem to have been completely scrubbed from any current online sources. My approach will be to catch as many fish as I can to complete the regular challenge and work toward the Master Angler title. Then if I get close, I’ll look into whether it’s even possible to catch a Pauite downstream of the closure. In other words, I’d like to complete the Master Angler level, but I’ll save solving the problem of the Pauite for later. While I expect to finish the regular challenge level this year, I don’t believe I’ll be able to catch all ten in 2023. This puts off the Pauite problem for at least another year. Who knows, maybe Silver Creek will open to fishing in 2024.</p>
-<p>Even though I’ve caught Coastal Rainbows, Kern River Rainbows, and Golden Trout as a child, I’m treating this challenge as a fresh start. I’m not even sure I could locate pictures of me with any of these fish. I was able to catch one fish in 2022, and plan on catching at least five more in the summer of 2023 to complete the first level of the challenge.</p>
-<section id="lahontan-cutthroatupper-truckee-river" class="level4">
-<h4 class="anchored" data-anchor-id="lahontan-cutthroatupper-truckee-river">Lahontan Cutthroat–Upper Truckee River</h4>
-<p>The Upper Truckee headwaters are in Meiss Meadows just over a pass from Highway 88 outside of Tahoe. It was a strange experience returning here as I did a backpacking trip to this same area with my father as a teenager in 1998. On that trip, we were trying to get to Showers Lake, and started hiking south from Highway 50. It was a big snow year and we quickly realized we couldn’t make it, so we drove to 88 and tried to hike north. We were blocked by snow again, and backtracked to Meiss Lake and camped there. It was shocking to see how much smaller the lake was in 2022 as compared to 1998.</p>
-<p>Meiss Meadow is a lovely area that’s an easy hike from the highway. The trail crosses the headwaters of the Truckee, but the river here is a little indistinct as it flows through the meadows and picks up water from Meiss Lake and a number of small ponds. We hiked past the river crossing, then ventured off trail down to where I thought the river would be a little narrower and larger. It was still pretty small and somewhat brushy, but there were lots of holes to cast into, and I could immediately see a lot of fish.</p>
-<p><img src="fishing_pics/meiss-meadows.JPG" class="img-fluid"> The old Meiss Ranch.</p>
-<p>It didn’t take long to catch a few Lahontans, and my first qualifying fish for the California Heritage Trout Challenge was in the books. It was a little disconcerting to see how low the water was, especially because it was only mid-July, not that late in the season. It was also disconcerting to see damage from the Caldor Fire at various points along Highway 88 up the canyon. The significant rain and snowfall in the winter of 23 will delay the summer fishing season a bit, but I’m hoping it will temporarily solve some of the water problems in the Sierra.</p>
-<p><img src="fishing_pics/upper_truckee.JPG" class="img-fluid"> Low water on the Upper Truckee in mid-July. Caught a deer unawares.</p>
-<p>More fish coming, summer 2023.</p>
-<p><a href="./index.html">Back to Main Page</a></p>
+<section id="slams" class="level2">
+<h2 class="anchored" data-anchor-id="slams">Slams</h2>
+<p>Utah introduced its cutt slam shortly after I (finally) learned how to consistently catch fish on the fly, and I was immediately intrigued by the concept. It forced me to learn more about the fish I was catching, explore waters I normally wouldn’t, and challenge myself by learning new techniques to tackle new waters.</p>
+<p>While I extensively researched the places I’d fish for my challenge, I was frustrated with a lot of the information I read from other sources. I found most websites to be long on fish pictures and short on details. This made things difficult because I was unsure how to prepare, what kinds of flies to use (though I think this is largely overrated), and what kind of water I’d be fishing. In some cases I couldn’t figure out where or how to access the streams.</p>
+<p>The most important thing for me when fishing is to have a positive experience: good fishing, small crowds, nice scenery. And, for most of us, it isn’t feasible to drive four or five hours to a fishing spot, only to realize that there isn’t public access or the creek is full of brook trout. As a result, this site is short on pictures but, I hope, long on details. I mostly skip the grip-and-grin fish pictures, and focus on the water and scenery. When researching my own slams I wanted to know what the water looked like to get a sense of its size and type. In general, I know what fish look like.</p>
+<!--#I think a lot of websites imply that anglers have unlimited time and money to catch fish. I don't have a boat, I don't know anyone with private water, and I have a full time job.-->
+<p>A summary of my completed and in progress slams can be found here. I provide details on where and how I caught my fish. Unless otherwise noted, all fish were caught on dry flies and released. I am in the process of creating this website, so more information will become available as I update.</p>
+<section id="utah-cutthroat-slam" class="level3">
+<h3 class="anchored" data-anchor-id="utah-cutthroat-slam"><a href="./utah_cutt_slam.html">Utah Cutthroat Slam</a></h3>
+</section>
+<section id="wyoming-cutt-slam" class="level3">
+<h3 class="anchored" data-anchor-id="wyoming-cutt-slam"><a href="./wyoming_cutt_slam.html">Wyoming Cutt Slam</a></h3>
+</section>
+<section id="nevada-native-fish-slam" class="level3">
+<h3 class="anchored" data-anchor-id="nevada-native-fish-slam"><a href="./nevada_fish_slam.html">Nevada Native Fish Slam</a></h3>
+</section>
+<section id="california-heritage-trout-challenge" class="level3">
+<h3 class="anchored" data-anchor-id="california-heritage-trout-challenge"><a href="./california_heritage_slam.html">California Heritage Trout Challenge</a></h3>
+</section>
+<section id="western-native-trout-challenge-completed-write-up-coming-soon" class="level3">
+<h3 class="anchored" data-anchor-id="western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</h3>
+</section>
+</section>
+<section id="other-waters" class="level2">
+<h2 class="anchored" data-anchor-id="other-waters">Other Waters</h2>
+<section id="fishing-patagonia-march-2023" class="level3">
+<h3 class="anchored" data-anchor-id="fishing-patagonia-march-2023">Fishing Patagonia (March 2023)</h3>
+<!--#Backpacking Setup-->
+<p>N.B.: I know it’s considered by many to be problematic to post locations of good fishing spots, but all the waters described here can be found on the state wildlife agency websites, on other personal websites, and in many Youtube videos, so I’m not giving away any secrets. Also, most of these spots (with a few exceptions) are not exactly blue ribbon, 20-inch fish, trout streams. The vast majority of waters I have fished, especially in Utah and Nevada, are small and brushy with small fish. I write about the Logan and other Cache Valley rivers in greater detail because these are my local fishing spots, but the Logan is already well-known as high quality fly fishing river. A google search for “Logan River fishing” shows the first two results are from visitUtah.com and Utah.com. I hope this information is valuable for others interested in fly fishing and pursuing native trout challenges.</p>
+<p>I also want to note that I receive no compensation from this website, and none of the products I recommend or equipment I use are sponsored.</p>
 
 
+</section>
 </section>
 
 </main> <!-- /main -->
