--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/quarto-contrib/social-share-0.1.0/social-share.css" rel="stylesheet">
+<link href="site_libs/quarto-contrib/social-share-0.1.0/all.css" rel="stylesheet">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -72,11 +74,38 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="nav-fixed">
 
 <div id="quarto-search-results"></div>
+  <header id="quarto-header" class="headroom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+      <div class="navbar-container container-fluid">
+      <div class="navbar-brand-container">
+    <a class="navbar-brand" href="./index.html">
+    <span class="navbar-title">Doctor Dry Fly</span>
+    </a>
+  </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
+  <span class="navbar-toggler-icon"></span>
+</button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav navbar-nav-scroll me-auto">
+  <li class="nav-item">
+    <a class="nav-link" href="./fishing_landing.html">
+ <span class="menu-text">Fly Fishing in the West</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./adventures_landing.html">
+ <span class="menu-text">Other Adventures</span></a>
+  </li>  
+</ul>
+              <div id="quarto-search" class="" title="Search"></div>
+          </div> <!-- /navcollapse -->
+      </div> <!-- /container-fluid -->
+    </nav>
+</header>
 <!-- content -->
-<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article">
+<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
@@ -84,19 +113,8 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#fish-slams" id="toc-fish-slams" class="nav-link active" data-scroll-target="#fish-slams">Fish Slams</a>
-  <ul class="collapse">
-  <li><a href="#utah-cutthroat-slam" id="toc-utah-cutthroat-slam" class="nav-link" data-scroll-target="#utah-cutthroat-slam">Utah Cutthroat Slam</a></li>
-  <li><a href="#wyoming-cutt-slam" id="toc-wyoming-cutt-slam" class="nav-link" data-scroll-target="#wyoming-cutt-slam">Wyoming Cutt Slam</a></li>
-  <li><a href="#nevada-native-fish-slam" id="toc-nevada-native-fish-slam" class="nav-link" data-scroll-target="#nevada-native-fish-slam">Nevada Native Fish Slam</a></li>
-  <li><a href="#california-heritage-trout-challenge" id="toc-california-heritage-trout-challenge" class="nav-link" data-scroll-target="#california-heritage-trout-challenge">California Heritage Trout Challenge</a></li>
-  <li><a href="#western-native-trout-challenge-completed-write-up-coming-soon" id="toc-western-native-trout-challenge-completed-write-up-coming-soon" class="nav-link" data-scroll-target="#western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</a></li>
-  </ul></li>
-  <li><a href="#other-adventures" id="toc-other-adventures" class="nav-link" data-scroll-target="#other-adventures">Other Adventures</a>
-  <ul class="collapse">
-  <li><a href="#hiking-the-o-and-fly-fishing-in-patagonia-coming-march-2023" id="toc-hiking-the-o-and-fly-fishing-in-patagonia-coming-march-2023" class="nav-link" data-scroll-target="#hiking-the-o-and-fly-fishing-in-patagonia-coming-march-2023">Hiking the O and Fly Fishing in Patagonia (coming March 2023)</a></li>
-  <li><a href="#tequila-tasting-in-tequila-mexico" id="toc-tequila-tasting-in-tequila-mexico" class="nav-link" data-scroll-target="#tequila-tasting-in-tequila-mexico">Tequila Tasting in Tequila, Mexico</a></li>
-  </ul></li>
+  <li><a href="#fly-fishing-in-the-west" id="toc-fly-fishing-in-the-west" class="nav-link active" data-scroll-target="#fly-fishing-in-the-west">Fly Fishing in the West</a></li>
+  <li><a href="#other-adventures" id="toc-other-adventures" class="nav-link" data-scroll-target="#other-adventures">Other Adventures</a></li>
   </ul>
 </nav>
     </div>
@@ -121,41 +139,15 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 </header>
 
 <p><img src="fishing_pics/rock_creek.JPG" class="img-fluid"> Looking down on Rock Creek, near Logan, UT.</p>
-<p>Utah introduced its cutt slam shortly after I (finally) learned how to consistently catch fish on the fly, and I was immediately intrigued by the concept. It forced me to learn more about the fish I was catching, explore waters I normally wouldn’t, and challenge myself by learning new techniques to tackle new waters.</p>
-<p>While I extensively researched the places I’d fish for my challenge, I was frustrated with a lot of the information I read from other sources. I found most websites to be long on fish pictures and short on details. This made things difficult because I was unsure how to prepare, what kinds of flies to use (though I think this is largely overrated), and what kind of water I’d be fishing. In some cases I couldn’t figure out where or how to access the streams.</p>
-<p>The most important thing for me when fishing is to have a positive experience: good fishing, small crowds, nice scenery. And, for most of us, it isn’t feasible to drive four or five hours to a fishing spot, only to realize that there isn’t public access or the creek is full of brook trout. As a result, this site is short on pictures but, I hope, long on details. I mostly skip the grip-and-grin fish pictures, and focus on the water and scenery. When researching my own slams I wanted to know what the water looked like to get a sense of its size and type. In general, I know what fish look like.</p>
-<!--#I think a lot of websites imply that anglers have unlimited time and money to catch fish. I don't have a boat, I don't know anyone with private water, and I have a full time job.-->
-<section id="fish-slams" class="level2">
-<h2 class="anchored" data-anchor-id="fish-slams">Fish Slams</h2>
-<p>A summary of my completed and in progress slams can be found here. I provide details on where and how I caught my fish. Unless otherwise noted, all fish were caught on dry flies and released. I am in the process of creating this website, so more information will become available as I update.</p>
-<section id="utah-cutthroat-slam" class="level3">
-<h3 class="anchored" data-anchor-id="utah-cutthroat-slam"><a href="./utah_cutt_slam.html">Utah Cutthroat Slam</a></h3>
-</section>
-<section id="wyoming-cutt-slam" class="level3">
-<h3 class="anchored" data-anchor-id="wyoming-cutt-slam"><a href="./wyoming_cutt_slam.html">Wyoming Cutt Slam</a></h3>
-</section>
-<section id="nevada-native-fish-slam" class="level3">
-<h3 class="anchored" data-anchor-id="nevada-native-fish-slam"><a href="./nevada_fish_slam.html">Nevada Native Fish Slam</a></h3>
-</section>
-<section id="california-heritage-trout-challenge" class="level3">
-<h3 class="anchored" data-anchor-id="california-heritage-trout-challenge"><a href="./california_heritage_slam.html">California Heritage Trout Challenge</a></h3>
-</section>
-<section id="western-native-trout-challenge-completed-write-up-coming-soon" class="level3">
-<h3 class="anchored" data-anchor-id="western-native-trout-challenge-completed-write-up-coming-soon">Western Native Trout Challenge (completed, write-up coming soon)</h3>
-<p>N.B.: I know it’s considered by many to be problematic to post locations of good fishing spots, but all the waters described here can be found on the state wildlife agency websites, on other personal websites, and in many Youtube videos, so I’m not giving away any secrets. Also, most of these spots (with a few exceptions) are not exactly blue ribbon, 20-inch fish, trout streams. The vast majority of waters I have fished, especially in Utah and Nevada, are small and brushy with small fish. I write about the Logan and other Cache Valley rivers in greater detail because these are my local fishing spots, but the Logan is already well-known as high quality fly fishing river. A google search for “Logan River fishing” shows the first two results are from visitUtah.com and Utah.com. I hope this information is valuable for others interested in fly fishing and pursuing native trout challenges.</p>
-<p>I also want to note that I receive no compensation from this website, and none of the products I recommend or equipment I use are sponsored.</p>
-</section>
+<section id="fly-fishing-in-the-west" class="level2">
+<h2 class="anchored" data-anchor-id="fly-fishing-in-the-west"><a href="./fishing_landing.html">Fly Fishing in the West</a></h2>
+<p>Information on my completed fish slams, gear, techniques, and other waters I’ve fished.</p>
 </section>
 <section id="other-adventures" class="level2">
-<h2 class="anchored" data-anchor-id="other-adventures">Other Adventures</h2>
-<section id="hiking-the-o-and-fly-fishing-in-patagonia-coming-march-2023" class="level3">
-<h3 class="anchored" data-anchor-id="hiking-the-o-and-fly-fishing-in-patagonia-coming-march-2023">Hiking the O and Fly Fishing in Patagonia (coming March 2023)</h3>
-</section>
-<section id="tequila-tasting-in-tequila-mexico" class="level3">
-<h3 class="anchored" data-anchor-id="tequila-tasting-in-tequila-mexico">Tequila Tasting in Tequila, Mexico</h3>
+<h2 class="anchored" data-anchor-id="other-adventures"><a href="./adventures_landing.html">Other Adventures</a></h2>
+<p>From time to time I do other things besides fly fishing.</p>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
@@ -293,6 +285,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
+<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://twitter.com/share?url=https://doctordryfly.com&amp;text=page" target="_blank" class="twitter"><i class="fab fa-twitter fa-fw fa-lg"></i></a><a href="https://www.linkedin.com/shareArticle?url=https://doctordryfly.com&amp;title=page" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=page&amp;body=Check out this link:https://doctordryfly.com" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://doctordryfly.com" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="https://www.stumbleupon.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="stumbleupon"><i class="fa-brands fa-stumbleupon fa-fw fa-lg"></i></a><a href="https://www.tumblr.com/share/link?url=https://doctordryfly.com&amp;name=page" target="_blank" class="tumblr"><i class="fa-brands fa-tumblr fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=page https://doctordryfly.com'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a></div></div>
 
 
 
