--- a/fishing_technique.html
+++ b/fishing_technique.html
@@ -39,6 +39,8 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
 <link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/quarto-contrib/social-share-0.1.0/social-share.css" rel="stylesheet">
+<link href="site_libs/quarto-contrib/social-share-0.1.0/all.css" rel="stylesheet">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -72,11 +74,38 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="nav-fixed">
 
 <div id="quarto-search-results"></div>
+  <header id="quarto-header" class="headroom fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+      <div class="navbar-container container-fluid">
+      <div class="navbar-brand-container">
+    <a class="navbar-brand" href="./index.html">
+    <span class="navbar-title">Doctor Dry Fly</span>
+    </a>
+  </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation" onclick="if (window.quartoToggleHeadroom) { window.quartoToggleHeadroom(); }">
+  <span class="navbar-toggler-icon"></span>
+</button>
+          <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav navbar-nav-scroll me-auto">
+  <li class="nav-item">
+    <a class="nav-link" href="./fishing_landing.html">
+ <span class="menu-text">Fly Fishing in the West</span></a>
+  </li>  
+  <li class="nav-item">
+    <a class="nav-link" href="./adventures_landing.html">
+ <span class="menu-text">Other Adventures</span></a>
+  </li>  
+</ul>
+              <div id="quarto-search" class="" title="Search"></div>
+          </div> <!-- /navcollapse -->
+      </div> <!-- /container-fluid -->
+    </nav>
+</header>
 <!-- content -->
-<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article">
+<div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
@@ -127,6 +156,7 @@ gtag('config', 'G-9FBWPJ5ZFQ', { 'anonymize_ip': true});
 <h4 class="anchored" data-anchor-id="change-flies-but-not-too-much">Change Flies, But Not Too Much</h4>
 <p>I believe fly selection is largely overrated, and I think it’s an easy way to signal expertise and purposefully confuse new anglers. Yes, I understand that in some situations there might be a hatch that the fish are keying in on, and if you’re on a super famous river with a ton of pressure it might be really important to match the hatch. But, this is not the average experience. In mid-summer fly fishing on almost any western river, I feel like I basically need a caddis and a parachute adams, maybe in two or three different colors.</p>
 <p>If your dry fly isn’t working at all, it might be time to switch flies. If this occurs, I always go smaller as I feel like fish will refuse to bite on flies that are too big, but not too small. It’s rare that you need a bigger fly if your existing fly isn’t working. I also switch colors sometimes, basically dividing flies into drab or bright. If drab isn’t working try bright, and vice versa. A lot of people make claims that say on low light days use drab flies (or maybe it’s other way around) but I’ve never noticed any patterns. A lot of this folk wisdom seems to work great except when it doesn’t. Don’t be inimated by fly selection, 90% of my fishing is done with no more than four or five flies. It isn’t a science, and we shouldn’t pretend like it is. Go with what feels right, if it doesn’t work, switch to something different.</p>
+<p><a href="./index.html">Back to Main Page</a></p>
 
 
 </section>
@@ -266,6 +296,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
+<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://twitter.com/share?url=https://doctordryfly.com&amp;text=page" target="_blank" class="twitter"><i class="fab fa-twitter fa-fw fa-lg"></i></a><a href="https://www.linkedin.com/shareArticle?url=https://doctordryfly.com&amp;title=page" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=page&amp;body=Check out this link:https://doctordryfly.com" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://doctordryfly.com" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="https://www.stumbleupon.com/submit?url=https://doctordryfly.com&amp;title=page" target="_blank" class="stumbleupon"><i class="fa-brands fa-stumbleupon fa-fw fa-lg"></i></a><a href="https://www.tumblr.com/share/link?url=https://doctordryfly.com&amp;name=page" target="_blank" class="tumblr"><i class="fa-brands fa-tumblr fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=page https://doctordryfly.com'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a></div></div>
 
 
 
